fix: prevent horizontal scrollbar on 320px by reducing element widths

--- a/styles/book.css
+++ b/styles/book.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 .book {
-    width: 300px;
+    width: 290px;
     min-height: 575px;
 
     background-color: rgb(7, 81, 106);
